Image size and social preview update

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="publisher" content="Bheru Lal Gameti" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <title>Bheru Lal Gameti - Full Stack Developer | Wordpress Developer</title>
+    <title>Bheru Lal Gameti - Full Stack Developer | WordPress Developer</title>
     <meta name="description"
         content="I'm Bheru Lal Gameti a WordPress Developer, Full Stack Developer and Blogger Professionally connected with the web development industry and information technology for 4 years, Well-organised person, problem solver" />
     <meta name="keywords"
@@ -19,7 +19,7 @@
     <!-- SEO META -->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Bheru Lal Gameti - Full Stack Developer | Wordpress Developer" />
+    <meta property="og:title" content="Bheru Lal Gameti - Full Stack Developer | WordPress Developer" />
     <meta property="og:description"
         content="I'm Bheru Lal Gameti a WordPress Developer, Full Stack Developer and Blogger Professionally connected with the web development industry and information technology for 4 years, Well-organised person, problem solver" />
     <meta property="og:url" content="https://iambherulal.github.io" />
@@ -31,7 +31,7 @@
     <meta name="twitter:title" content="Bheru Lal Gameti - Full Stack Developer | WordPress Developer" />
     <meta name="twitter:description"
         content="I'm Bheru Lal Gameti a WordPress Developer, Full Stack Developer and Blogger Professionally connected with the web development industry and information technology for 4 years." />
-    <meta name="twitter:image" content="https://iambherulal.github.io/img/socialpreview.png" />
+    <meta name="twitter:image" content="https://iambherulal.github.io/socialpreview.png" />
     <!-- SEO META -->
 
     <script type="application/ld+json">
@@ -40,7 +40,7 @@
             "@type": "Person",
             "name": "Bheru Lal Gameti",
             "url": "https://iambherulal.github.io",
-            "image": "https://iambherulal.github.io/img/socialpreview.png",
+            "image": "https://iambherulal.github.io/socialpreview.png",
             "sameAs": [
                 "https://www.facebook.com/iambherulal",
                 "https://twitter.com/iambherulal",
@@ -50,7 +50,6 @@
             ]
         }
     </script>
-    <link rel="icon" type="image/png" href="./img/favicon.png" />
 
     <!--// Font Awesome //-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" />
